_k8s/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cdt-backend
spec:
  selector:
    app: cdt-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
