_k8s/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cdt-backend-ingress
  namespace: default
spec:
  rules:
    - host: "localhost"  
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cdt-backend
                port:
                  number: 80
  ingressClassName: traefik
